...
    }
    
    private func configureCurrencyButtons() {
        let currencies = restoreCurrencies()
        
        currencyFromButton = CurrencyButton(currency: currencies.currencyFrom, delegate: self)
        currencyFromButton.accessibilityIdentifier = "currencyFrom"
        currencyToButton = CurrencyButton(currency: currencies.currencyTo, delegate: self)
        currencyToButton.accessibilityIdentifier = "currencyTo"
    }
    
    private func configureAutoLayout() {
        view.addSubviews(currencyFromButton, currencyToButton, accessoryPanel, keyboard)
        
        let padding: CGFloat = 10
...
