...
        fatalError("init(coder:) has not been implemented")
    }
    
    private func configure() {
        switch action {
        case .delete:
            accessibilityIdentifier = "deleteButton"
            setupDeleteButtonImage()
        case .comma:
            accessibilityIdentifier = "commaButton"
            setupLabel()
        }
        addTarget(self, action: #selector(actionButtonTapped(_:)), for: .touchUpInside)
...
