...
        signView.contentMode = .scaleAspectFit

        arrowView.contentMode = .scaleAspectFit
        
        nameLabel.text = currency.name
        
        valueLabel.accessibilityIdentifier = "currencyValue"
        valueLabel.font = UIFont.systemFont(ofSize: 42, weight: .medium)
        valueLabel.adjustsFontSizeToFitWidth = true
        valueLabel.minimumScaleFactor = 0.4
        
        rateLabel.isHidden = true
    }
...
